making logo responsive and adj 'main'. Carrying menu right align issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,7 @@ header {
 
 h1 {
     font-family: sans-serif;
-    font-size: 25px;
-    text-transform: capitalize;
+    font-size: 35px;
     letter-spacing: 3px;   
     color: #8C8665;
 
@@ -53,8 +52,7 @@ h1 {
     list-style-type: none;
     font-size: 125%;
     letter-spacing: 2px;
-    padding-top: 10px;
-    
+    padding-top: 10px;    
 }
 
 #menu > li {
@@ -71,7 +69,7 @@ nav {
     background-color: #ffffff;
     width: 100%;
     left: 0;
-    padding: 1 1rem;
+    padding: 0 1rem;
     box-shadow: 0 2px 2px #8C8665;
     display: none;
     top: 100%;
@@ -105,4 +103,41 @@ footer {
     bottom: 0;
     width: 100%;
     
+  }
+
+  /*media query for tablets and larger >768px*/
+  @media only screen and (min-width: 768px) {
+    /*header*/
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1 rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 400%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /*main content*/
+    main {
+        /*push main content down to accomodate larger header*/
+        margin-top: 80px;
+    }
   }
